v6.1
-----
+ Added a "Popular" tab on the homepage to browse the most-played games on Steam
+ Store pages now display a full size background


v6.0.1
-----
+ Added profile links to private profiles
+ Gift transactions are now listed separately in account totals
: Fixed a bug that caused inventory pages to not always show price history

v6.0
-----
+ Added warning if browsing in a language other than your preferred language (set in options)
+ Added ability to add a custom amount to your Steam wallet
: Fixed a bug that caused highlighting not to work correctly if DOM storage was disabled
: Fixed a bug that caused emptying your shopping cart to break purchase process
: Fixed a bug that caused you to not be able to have more than one item in your cart at once
: Fixed a bug on badge pages that showed incorrect market links
: Fixed a bug that caused the market page to format incorrectly
: Fixed a bug in some languages where badge filtering didn't work properly

v5.9.1
-----
: Updated code according to Mozilla's requests
- Removed header link insertion
- Removed feature links as they were implemented by Valve

v5.9
-----
+ Added a link on user profiles to their wishlist
+ Added back the achievement section to app pages that Valve mysteriously removed
+ Added sorting options to achievement pages, and the ability to sort by date unlocked
+ Added badge completion and value of card drops to badges page based on avg card price
+ Added badge page sorting options
+ Added Enhanced Steam features to Steam Tag pages
+ Added extended options for DLC checkboxes that are accessible by clicking "Options ▾".
+ Added price options to search results pages letting you easily filter results by price
+ Incorporated coupon codes into lowest price data
+ The "Remove" links on the wishlist no longer require the page to reload
+ Added regional pricing to sale pages
: Fixed a bug in market transaction total caused by change in API by Valve