@@ -2,6 +2,7 @@ v6.1
 -----
 + Added a "Popular" tab on the homepage to browse the most-played games on Steam
 + Store pages now display a full size background
++ Added back links in the header (Forums, Games, Reviews)
 
 
 v6.0.1
